// Copyright Â© 2017 The Things Network Foundation, distributed under the MIT license (see LICENSE file)

syntax = "proto3";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/TheThingsNetwork/ttn/api/identifiers.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package ttn.v3;

option go_package = "github.com/TheThingsNetwork/ttn/pkg/ttnpb";

// User is the message that defines an user on the network.
message User {
  UserIdentifiers user = 1 [(gogoproto.embed) = true, (gogoproto.nullable) = false];

  // password is the user's password.
  string password = 2;

  // name is the user's full name.
  string name = 3;

  // validated denotes if the email address has been validated.
  bool validated = 4;

  // admin denotes whether or not the user has administrative rights within the tenant.
  bool admin = 5;

  // created_at denotes when the user was created.
  google.protobuf.Timestamp created_at = 6 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];

  // archived_at is the time when the user account was archived.
  google.protobuf.Timestamp archived_at = 7 [(gogoproto.stdtime) = true];
}
